# geminixprize

./: .env.example  .gitignore  LICENSE  README.md  agent_orchestrator.py  eslint.config.mjs  package-lock.json  package.json  requirements.txt
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
backend/: requirements.txt
backend/agents/: __init__.py  atlas_agent.py  base_agent.py  echo_agent.py  forge_agent.py  insight_agent.py  nova_agent.py  orbit_agent.py  pulse_agent.py  vault_agent.py
backend/api/: main.py  routes.py
backend/core/: auth.py  config.py
backend/integrations/: duda_mcp_client.py  printify_client.py  stripe_mcp_client.py
backend/models/: schemas.py
backend/orchestrator/: Dockerfile  event_bus.py  main.py  orchestrator.py  requirements.txt
backend/services/: mock_providers.py
infra/: README.md
scripts/: README.md
services/api/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
services/api/src/antigravity_api/: __init__.py  main.py
services/api/src/antigravity_api/application/: agent_catalog.py  ai_text_generation.py  generate_company.py  get_service_health.py
services/api/src/antigravity_api/domain/: agent_role.py  company_blueprint.py  service_health.py
services/api/src/antigravity_api/infrastructure/: gemini_generation.py  settings.py
services/api/src/antigravity_api/presentation/http/: auth.py  company_router.py  health_router.py  schemas.py  use_case_provider.py
services/api/tests/: test_generate_company.py  test_health.py
shared/types/: models.py
(+42 files in other folders)
