[project]
name = "antigravity-api"
version = "0.1.0"
description = "FastAPI orchestration backend for MadeThis."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
